--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ms. Camille D.</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="cute.png" />
   </head>
   <body>
     <body class="not-loaded">
       <div class="night"></div>
+
       <div class="flowers">
         <div class="flower flower--1">
           <div class="flower__leafs flower__leafs--1">
@@ -27,6 +29,7 @@
             <div class="flower__light flower__light--7"></div>
             <div class="flower__light flower__light--8"></div>
           </div>
+
           <div class="flower__line">
             <div class="flower__line__leaf flower__line__leaf--1"></div>
             <div class="flower__line__leaf flower__line__leaf--2"></div>
