--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ms. Camille D.</title>
+    <title>Ms. C DR.</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="cute.png" />
   </head>
