--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <title>Ms. Camille D.</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="cute.png" />
-    <audio id="myAudio" controls autoplay src="bfy.mp3"></audio>
   </head>
   <body>
     <body class="not-loaded">
       <div class="night"></div>
-
       <div class="flowers">
         <div class="flower flower--1">
           <div class="flower__leafs flower__leafs--1">
@@ -322,15 +320,20 @@
           </div>
         </div>
       </div>
+      <audio
+        style="
+          position: absolute;
+          top: 95%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          padding: 10px;
+        "
+        controls
+        src="bfy.mp3"
+      ></audio>
     </body>
 
     <!-- Javascript here -->
-    <script>
-      window.onload = function () {
-        var audio = document.getElementById("myAudio");
-        audio.play();
-      };
-    </script>
     <script src="script.js"></script>
   </body>
 </html>
