--- a/index.html
+++ b/index.html
@@ -329,9 +329,10 @@
           padding: 10px;
         "
         controls
-        loop
-        src="bfy.mp3"
-      ></audio>
+        controlsList="nodownload"
+      >
+        loop src="bfy.mp3" >
+      </audio>
     </body>
 
     <!-- Javascript here -->
