--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
         "
         controls
         controlsList="nodownload"
-      >
-        loop src="bfy.mp3" >
-      </audio>
+        loop
+        src="bfy.mp3"
+      ></audio>
     </body>
 
     <!-- Javascript here -->
