--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ms. C DR.</title>
+    <title> CHELSYA DINAR MAYKA PUTRI </title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="cute.png" />
   </head>
@@ -330,6 +330,8 @@
         "
         controls
         controlsList="nodownload"
+        autoplay
+        muted
         loop
         src="bfy.mp3"
       ></audio>
